--- a/src/main/resources/templates/admin/fragment/top.html
+++ b/src/main/resources/templates/admin/fragment/top.html
@@ -54,7 +54,7 @@
                        <a class="btn btns-primary btn-block" th:href="@{/admin/user}">User <i class="icon-user_icon"></i></a>
                     </li>
                     <li>
-                       <a class="btn btns-primary btn-block" th:href="@{/admin/user}">Map <i class="icon-maps"></i></a>
+                       <a class="btn btns-primary btn-block" th:href="@{/admin/map}">Map <i class="icon-maps"></i></a>
                     </li>
                 </div>
                 </ul>
