--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -10,15 +10,12 @@
 
     <title>Availaball</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
-    <link rel="stylesheet" th:href="@{/css/main.css}" />
-      <link rel="stylesheet" th:href="@{/css/customs.css}" />
+    <link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />
     <link rel="stylesheet" th:href="@{/css/sb-admin.css}" />
- 
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
-         
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/font-awesome/css/font-awesome.css}"/>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
-         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 
     <script th:src="@{/js/jquery.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
