--- a/src/main/resources/templates/admin/page/edit-user.html
+++ b/src/main/resources/templates/admin/page/edit-user.html
@@ -1,6 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Edit User</title>
+    <link rel="stylesheet" th:href="@{/css/plugins/main.css}" />
 <th:block th:replace="/admin/layout :: head"></th:block>
 </head>
 
@@ -21,7 +22,7 @@
         <p class="header">Edit User</p>
         <form  method="post" accept-charset="utf-8"> 
 
-        <label-s style="margin-left: 30px;"> Nama Lengkap </label-s>
+        <label-s style="margin-left: 30px;"> Nama Lengkap2 </label-s>
          <div class="form-group has-feedback">
             <input type="text" name="login" value="" placeholder="Ketik Nama Lengkap" class="form-controls" id="login" maxlength="80" size="30">            
         </div>
