--- a/src/main/resources/templates/admin/page/index.html
+++ b/src/main/resources/templates/admin/page/index.html
@@ -2,18 +2,25 @@
 <head>
 <title>Availaball</title>
 <th:block th:replace="/admin/layout :: head"></th:block>
+      <link rel="stylesheet" th:href="@{/css/plugins/list-field.css}" />
+            <link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />
+            <link rel="stylesheet" th:href="@{/css/plugins/main.css}" />
+      <script src="/js/futsalfield.js"></script>
 </head>
 
 <body>
 	<div id="wrapper">
-		<div th:replace="/fragment/top :: top-header"></div>
+		<div th:replace="/admin/fragment/top :: top-header"></div>
+
 		<!-- page wrapper -->
 		<div id="page-wrapper">
 			<div layout:fragment="content">
 				<th:block layout:fragment="content">
 					<div class="container-fluid">
 						<!-- Page Heading -->
+
 						<div class="row">
+
 							<div class="col-lg-12 ">
 								<div class="col-md-4 col" style="padding-top: 30px; ">
 									<h4 style="text-decoration: none;">List Lapangan</h4>
@@ -42,7 +49,6 @@
                 
                  									<div class="modal-footer" id="modal_footer">
                  									<div class="button_c_d">
-                 										<input type="hidden" name="id"/>
                   										<button type="button" id = "button_delete" class="btn btn-primary">Delete</button>
                											<button type="button" id="button_cancel" class="btn btn-default" data-dismiss="modal">Cancel</button>
                  									</div>
@@ -102,6 +108,5 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" th:src="@{/js/futsalfield.js}"></script>
 </body>
 </html>
