change model sprint4

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <form th:action="@{/logout}" method="post" class="form-group pull-right signoutForm">
-
+	<label th:text="${account}"></label>
     <div class="pull-right">
         <button type="submit" class="btn btn-primary btn-flat">Sign out</button>
     </div>
