--- a/src/main/resources/templates/admin/fragment/top.html
+++ b/src/main/resources/templates/admin/fragment/top.html
@@ -10,7 +10,7 @@
         <!-- Top Navigation -->
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation"  th:fragment="top-header">
             <div class="navbar-header" style="padding-left: unset; padding-top: 20px; margin-left: 53px;">
-            <a href="">05 April 2017</a>
+            <a href="" th:text="${time}"></a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -36,7 +36,7 @@
                 </div> 
                 <div ">
                     <li>
-                        <a class ="tops " href="#" >Bolalob</a>
+                        <a class ="tops " href="#" th:text="${account.name}"></a>
                     </li>
                 </div>
             
