--- a/src/main/resources/static/css/plugins/edit-field.css
+++ b/src/main/resources/static/css/plugins/edit-field.css
@@ -81,54 +81,83 @@
 	color:white!important;
 
 }
-
-#buttoned
+#buttoned_1
 {
-
-    width: 21px;
-    height: 21px;
-    padding: 37px 0;
-    padding: 4px 0;
-    font-size: 12px;
-    line-height: 1.428571429;
-    border-radius: 81px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+  color:#5cb85c;
+  background-color:white!important;
+     margin-bottom:9px;
+  
+}
+#buttoned_2
+{
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
   color:#5cb85c;
   background-color:white!important;
      margin-bottom:9px;
   
 }
 
-.lefted{
-	
-    padding-left: unset!important;
-	
-}
 #reds{
-width: 21px;
-    height: 21px;
-    padding: 37px 0;
-    padding: 4px 0;
-    font-size: 12px;
-    line-height: 1.428571429;
-    border-radius: 81px;
+width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
   color:#d8514c!important;
    background-color:white!important;
    margin-bottom:9px;
 }
 
+#reds_2{
+width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+  color:#d8514c!important;
+   background-color:white!important;
+   margin-bottom:9px;
+}
 
-.line{
-    /* margin-top: 20px; */
-    border: 0;
-    border-top: 1px solid #d8d5d5;
-    /* border-top: 1px outset rgb(234, 234, 234); */
-    background-color: #ffffff;
-    width: 100%;
+hr .line{
+	  height: 0!important;
+  -webkit-box-sizing: content-box!important;
+     -moz-box-sizing: content-box!important;
+          box-sizing: content-box!important;
 }
 
 #fields-round{
 	    border-radius: 4px;
-	  	margin-bottom:10px;
+}
+
+.form-controled {
+    display: block;
+    width: 82px;
+    height: 32px;
+    padding: 6px 20px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
 }
 
 .bound{
@@ -139,12 +168,16 @@ width: 21px;
 	font-weight:light!important;
 }
 
+#icon-light-2{
+	    font-family: Open Sans!important;
+	font-weight:light!important;
+}
+
 #hour-dropdown{
 	    border-radius: 4px;
     height: 34px;
     width: 68px;
 }
-
 
 /* Map */
 
@@ -166,7 +199,6 @@ width: 21px;
 	margin-bottom: 15px !important;
 	max-width: 100% !important;
 	font-weight: normal !important;	
-	font-family: opensans;
 }
 
 .time{
@@ -175,6 +207,8 @@ width: 21px;
 	border-color: #CCCCCC;
 	font-family: opensans;
 	margin-right: 10px;
+	width: 73px;
+	height: 32px;
 	
 }
 
@@ -184,16 +218,9 @@ width: 21px;
 	border-color: #CCCCCC;
 	font-family: opensans;
 	margin-right: 30px;
-	
+	width: 73px;
+	height: 32px;	
 }
 
-.ton{
-	border-radius: 5px;
-    border-width: thin;
-    margin-right: 20px;
-    font-family: opensans;
-    background-color: #FFFFFF;
-	border-color: #CCCCCC;	
     
-}
 	
