--- a/src/main/resources/static/css/plugins/main-user.css
+++ b/src/main/resources/static/css/plugins/main-user.css
@@ -24,22 +24,6 @@ html {
 .h4{
 	font-family: opensans;
 }
-hr {
-    margin-top: 20px;
-    border: 0;
-    border-top-width: 0px;
-    border-top-style: none;
-    border-top-color: currentcolor;
-    border-top: 3px solid #999999;
-    margin-right: 37px;
-}
-hr {
-    height: 0;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    border-width: 3px solid #999999;
-}
 
 .col-md-4 {
     width: 33.33333333%;
@@ -80,37 +64,25 @@ hr {
 }
 
 
-.btns {
-    display: inline-block;
-    padding: 6px 12px;
-    padding-left: 12px;
-    margin-bottom: 0;
-    font-size: 12px;
-    font-family:opensans;
-    font-weight: normal;
+.btnss {
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: 13px;
+    font-weight: bold;
     line-height: 1.42857143;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
-    -ms-touch-action: manipulation;
     touch-action: manipulation;
     cursor: pointer;
-    -webkit-user-select: none;
     -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     background-image: none;
-    border: 1px solid transparent;
-        border-top-color: transparent;
-        border-right-color: transparent;
-        border-bottom-color: transparent;
-        border-left-color: transparent;
+    border: 1px solid transparent;   
     border-radius: 15px;
 }
 
-.btns-default {
-    color: #333;
-    background-color: #fff;
+.btnss-default {
+    background-color: #FFFFFF;
     border-color: #1BD679;
     color: #1BD679;
     margin-left: 30px;
@@ -118,24 +90,24 @@ hr {
 }
 
 
-.btns:hover,
-.btns:focus,
-.btns.focus {
+.btnss:hover,
+.btnss:focus,
+.btnss.focus {
   color: #green;
   text-decoration: none;
 }
-.btns-default:focus,
-.btns-default.focus {
+.btnss-default:focus,
+.btnss-default.focus {
   color: #333;
-  background-color: #e6e6e6;
+  background-color: #FFFFFF;
   border-color: #0D8E4E;
   color: #0D8E4E;
   height: 30px;
 } 
 }
-.btns-default:hover {
+.btnss-default:hover {
   color: #333;
-  background-color: #e6e6e6;
+  background-color: #FFFFFF;
   border-color: #0D8E4E;
   color: #0D8E4E;
   height: 30px;
