--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head">
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
+	xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="" />
+<meta name="author" content="" />
 
-    <title>Availaball</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />
-    <link rel="stylesheet" th:href="@{/css/sb-admin.css}" />
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
-    <link rel="stylesheet" th:href="@{/font-awesome/css/font-awesome.css}"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
-
-    <script th:src="@{/js/jquery.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
-    <script th:src="@{/js/app.min.js}"></script>
-    <script th:src="@{/js/jquery.slimscroll.min.js}"></script>
-    <script th:src="@{/js/jquery-2.2.3.min.js}"></script>
-    
-    
-    <script type="text/javascript" src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>
-    <script type="text/javascript" th:src="@{/lib/jquery.spring-friendly.js}"></script>
+<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+<link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />
+<link rel="stylesheet" th:href="@{/css/sb-admin.css}" />
+<link rel="stylesheet" th:href="@{/css/style.css}" />
+<link rel="stylesheet" th:href="@{/font-awesome/css/font-awesome.css}" />
+<link href="https://fonts.googleapis.com/css?family=Roboto"
+	rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans"
+	rel="stylesheet">
 	
+	<script th:src="@{/static/js/jquery.js}"></script>
+	<script th:src="@{/static/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/jquery.js}"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/app.min.js}"></script>
+	<script th:src="@{/js/jquery.slimscroll.min.js}"></script>
+	<script th:src="@{/js/jquery-2.2.3.min.js}"></script>
+	<script src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>
+	<script th:src="@{/lib/jquery.spring-friendly.js}"></script>
+<title>Page</title>
 </head>
-
-<!-- Header -->
 <body>
-
-<div id="wrapper">
-    <div th:replace="/fragment/top :: top-header">
-    </div>
-    </div>
-    <div id="page-wrapper">
-        <div th:fragment="content">
-        </div>
-      
-    </div>
-
-    <script th:src="@{/static/js/jquery.js}"></script>
-    <script th:src="@{/static/js/bootstrap.min.js}"></script>
+	<div id="wrapper">
+		<div th:replace="/admin/fragment/top :: top-header"></div>
+		<div id="page-wrapper">
+			 <div class="padding-md content content-list" layout:fragment="content">
+            </div>
+		</div>
+	</div>
 
 </body>
-
 </html>
