--- a/src/main/resources/templates/admin/page/map.html
+++ b/src/main/resources/templates/admin/page/map.html
@@ -1,33 +1,19 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html layout:decorator="/admin/layout"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Map</title>
-<th:block th:replace="/admin/layout :: head"></th:block>
+<link rel="stylesheet" th:href="@{/css/plugins/map.css}" />
 </head>
 <body>
-	<div id="wrapper">
-		<div th:replace="/admin/fragment/top :: top-header"></div>
-	 </div>
-	 
+	<div id="page-wrapper">
+            <div layout:fragment="content">
 	<div id="mapouter">
 		<div id="gmap_canvas">
-			<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" src="https://maps.google.com/maps?q=Jakarta%20Indonesia&t=&z=14&ie=UTF8&iwloc=&output=embed" marginwidth="0">
-			
-			</div>
-			
-			<style>
-			#gmap_canvas{
-			
-			height:100%;
-			width:100%;
-			}
-			
-			#mapouter{
-		 	margin-left: 306px;
-			height:500px;
-			width:600px;}
-			</style>
-			
-</div>	
+			<iframe width="100%" height="200%" frameborder="0" scrolling="no" marginheight="0" src="https://maps.google.com/maps?q=Jakarta%20Indonesia&t=&z=14&ie=UTF8&iwloc=&output=embed" marginwidth="0">
+		</div>
+	</div>
+	</div>
+</div>
 </body>
 </html>
 
