--- a/src/main/resources/templates/admin/page/user.html
+++ b/src/main/resources/templates/admin/page/user.html
@@ -50,38 +50,38 @@
 										<p class="header"
 											style="margin-top: 30px; text-align: center; margin-bottom: 35px; font-size: 20px; color: #000000; font-family: roboto;">Create
 											New User</p>
-										<form method="post" accept-charset="utf-8">
+										<form method="post" th:action="@{/admin/create/user}" accept-charset="utf-8">
 
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Nama Lengkap
 												</label-s>
 												<input type="text" name="name" value=""
 													placeholder="Ketik Nama Lengkap" class="form-controls"
-													id="nama" required maxlength="80" size="30">
+													id="name" required maxlength="80" size="30">
 
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Email </label-s>
-												<input type="email" name="email" value=""
-													placeholder="Ketik Email" class="form-controls" id="email"
+												<input type="email" name="username" value=""
+													placeholder="Ketik Email" class="form-controls" id="username"
 													required maxlength="80" size="30">
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Nomor Telepon
 												</label-s>
-												<input type="text" name="telp" value=""
+												<input type="text" name="phone" value=""
 													placeholder="Ketik Nomor Telepon" class="form-controls"
-													id="nomor" required maxlength="80" size="30">
+													id="phone" required maxlength="80" size="30">
 
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Password </label-s>
-												<input type="password" name="pass" value=""
+												<input type="password" name="plainPassword" value=""
 													placeholder="Ketik Password" class="form-controls"
-													id="nomor" required maxlength="80" size="30">
+													id="plainPassword" required maxlength="80" size="30">
 
 											</div>
 											<!-- penting to change -->
@@ -126,8 +126,8 @@
 				<div class="overlay"></div>
 				<div class="popup edit-form">
 					<p class="header-s">Edit User</p>
-					<form method="post" accept-charset="utf-8">
-
+					<form method="post" th:action="@{/admin/edit/user}" accept-charset="utf-8">
+						<input type="hidden" name="id" id="id">
 						<label-s style="margin-left: 30px;"> Nama Lengkap </label-s>
 						<div class="form-group has-feedback">
 							<input type="text" name="name" value="" class="form-control-edit"
@@ -136,8 +136,8 @@
 
 						<label-s style="margin-left: 30px;"> Email </label-s>
 						<div class="form-group has-feedback">
-							<input type="text" name="email" value=""
-								class="form-control-edit" id="email" maxlength="80" size="30">
+							<input type="text" name="username" value=""
+								class="form-control-edit" id="username" maxlength="80" size="30">
 
 						</div>
 
