--- a/src/main/resources/templates/admin/page/edit-field.html
+++ b/src/main/resources/templates/admin/page/edit-field.html
@@ -64,7 +64,7 @@
                                   <!-- Map icon -->
                         <div class="col-lg-4 map2 lefted" id="map" style="margin-top: -9px;padding-right: unset;" >
                            <label class="label-color lefted"> -6.19152212312</label>
-                           <a th:href="@{/admin/map}">
+                           <a th:href="@{/admin/page/current-map}">
                            <img src="/img/map.jpg" class="map-icons">
                            </a>
                            
@@ -98,7 +98,7 @@
 													</div>
 													<span class="input-group-btn ">
 														<button class="btn btn-success btn-add" type="button"
-															id="buttoned_1">
+															id="green-round">
 															<span class="icon_add"></span>
 														</button>
 													</span>
@@ -138,7 +138,7 @@
             
      <!-- Jam Buka -->
                          
-                        <div class="line"></div>
+                        <div class="horizontal-line"></div>
                     <div class="col-lg-12">
                 
                     <label> Jam Buka</label>
@@ -366,7 +366,7 @@
                   
                         <!-- Harga -->
                              <div class="col-lg-11">
-								<hr></hr>
+							
 								<label class="lab">Harga</label>
 							</div>
 
@@ -418,7 +418,7 @@
 														<label-ed> Rp </label-ed>
 														<input class="form-controled" name="fields[]" type="text"
 															id="fields-round" placeholder="Harga" />
-															<button class="btn btn-success btn-add_2" type="button"
+															<button class="btn btn-success btn-add" type="button"
 													id="buttoned_2">
 													<span class="glyphicon glyphicon-plus" id="icon-light-2"></span>
 												</button>
