--- a/src/main/resources/static/css/fonts/icon-edit/style.css
+++ b/src/main/resources/static/css/fonts/icon-edit/style.css
@@ -26,7 +26,9 @@
 
 .icon_minus:before {
   content: "\e905";
+         font-size: 20px!important;
 }
 .icon_add:before {
   content: "\e906";
+         font-size: 20px!important;
 }
