--- a/src/main/resources/templates/admin/page/picklocation.html
+++ b/src/main/resources/templates/admin/page/picklocation.html
@@ -2,18 +2,96 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Map</title>
-<link rel="stylesheet" th:href="@{/css/plugins/map.css}" />
+<link rel="stylesheet" th:href="@{/css/plugins/picklocation.css}" />
+ <script type="text/javascript" src='http://maps.google.com/maps/api/js?key=AIzaSyCegjS81MOvtXounku2rnlJlggMKv0tv9w&sensor=false&libraries=places'></script>
+<script type="text/javascript" src="/js/infobox.js"></script>
+
 </head>
-<body>
-	<div id="page-wrapper">
-            <div layout:fragment="content">
-	<div id="mapouter">
-		<div id="gmap_canvas">
-			<iframe width="100%" height="200%" frameborder="0" scrolling="no" marginheight="0" src="https://maps.google.com/maps?q=Jakarta%20Indonesia&t=&z=14&ie=UTF8&iwloc=&output=embed" marginwidth="0">
-		</div>
+<body onload="initialize()">
+
+
+ <div id="page-wrapper"  layout:fragment="content" style="padding-left:unset;padding-right:unset;">
+	
+            <div class="container-fluid">
+
+                <!-- Page Heading -->
+                <div class="row">
+            
+                   <div id="map-container" class="col-lg-12">
+                    <div class="col-lg-12" style="padding-bottom: 30px; padding-top: unset; padding-left: unset;">
+                          <div class="col-md-6" style="float: left; padding-top:unset;padding-left: unset;">
+                           <a href="" style="padding-left: unset;"><i class="fa fa-long-arrow-left" style="padding-left: unset;"></i>Back </a>
+                      </div>
+                      <div class="col-md-6" style=" padding-top: unset; padding-left: unset;">
+                        <label>Pick Location</label>                          
+                      </div>
+                      </div>
+                    <div id="map"></div>
+                    <div id="marker-tooltip"></div>
+
+
+                  <script >
+   
+
+
+                 function initialize() {
+                var secheltLoc = new google.maps.LatLng(49.47216, -123.76307);
+                var myMapOptions = {
+                     zoom: 15
+                    ,center: secheltLoc
+                    ,mapTypeId: google.maps.MapTypeId.ROADMAP
+                };
+                var theMap = new google.maps.Map(document.getElementById("map"), myMapOptions);
+              
+                var marker = new google.maps.Marker({
+                    map: theMap,
+                    draggable: true,
+                    position: new google.maps.LatLng(-25.363, 131.004),
+                    visible: true
+                });
+                var boxText = document.createElement("div");
+                boxText.style.cssText = "background-color: transparent; border: 2px solid #transparent;border-radius: 25px;cursor: pointer; margin-bottom: 22px;text-align: center;";
+                boxText.innerHTML = '<button class="btn pick-location" id="pick-location">Pick Location</button>';
+                var myOptions = {
+                     content: boxText
+                    ,disableAutoPan: false
+                    ,maxWidth: 0
+                    ,pixelOffset: new google.maps.Size( -140,-140)
+                    ,zIndex: null
+                    ,boxStyle: { 
+                      background: ""
+                      ,opacity: 0.75
+                      ,width: "280px"
+                     }
+                    ,closeBoxURL: ""
+                    ,infoBoxClearance: new google.maps.Size(1, 1)
+                    ,isHidden: false
+                    ,pane: "floatPane"
+                    ,enableEventPropagation: false
+                };
+                google.maps.event.addListener(marker, "click", function (e) {
+                   
+                    ib.open(theMap, this);
+                     alert(this.position);
+                });
+
+                var ib = new InfoBox(myOptions);
+                ib.open(theMap, marker);
+
+
+
+            }
+
+
+
+        </script>      
+  
+            </div>
+        </div>
+        </div>
+        <!-- /#page-wrapper -->
 	</div>
-	</div>
-</div>
+
 </body>
 </html>
 
