--- a/src/main/resources/static/css/plugins/map.css
+++ b/src/main/resources/static/css/plugins/map.css
@@ -1,10 +1,30 @@
-#gmap_canvas {
-	height: 200%;
-	width: 200%;
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+#map {
+	height: 100%;
+	width: 100%;
+	position:static;
+	z-index:0;
+}
+/* Optional: Makes the sample page fill the window. */
+html, body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
-#mapouter {
-	margin-left: 306px;
-	height: 500px;
-	width: 1000px;
+.map-box{
+	height:100%;
+	position:relative;
+}
+
+.form-box{
+	position: absolute;
+	top:0;
+	height:100%;
+	width:30%;
+	right:0;
+	background-color:rgba(255,255,255,0.8);
+	z-index:10;
+	padding-top:50px;
 }
